fix inline repeating fields spacing

--- a/client/app/styles/app.css
+++ b/client/app/styles/app.css
@@ -330,11 +330,10 @@ html, body {
   margin-right: 15px;
 }
 
-.displayed-inline.section .add,
-.displayed-inline.section.repeat .add {
-    margin-top: -30px;
+.displayed-inline.section .block.text label,
+.displayed-inline.section .block.select label {
+  float: none;
 }
-
 
 /* tokens blocks */
 
@@ -474,6 +473,11 @@ html, body {
 
 .section.repeat .block.text input {
   width: 400px;
+}
+
+.displayed-inline.section .block.text input {
+  margin-left: 0;
+  width: 250px;
 }
 
 .section.repeat .block:first-of-type {
